--- a/style.css
+++ b/style.css
@@ -35,19 +35,17 @@ body {
 
 #menu {
 	position: fixed;
-	left: 10px;
-	top: 40%;
-	color: white;
+	left: 50px;
+	top: 30%;
+	color: #fff;
 	letter-spacing: .01em;
 	z-index:10;
 	padding: 13px;
 	padding-right: 15px;
-	font: 15px/20px monospace;
-    letter-spacing: -0.3px;
+	font: 15px;
+        letter-spacing: -0.3px;
 	cursor: move;
 	    box-shadow: #fefb00 3px 3px 0, 6px 6px 0px #ff0000;
-	border-style: solid;
-	border-color: blue;
 	background-color: #eee;
 }
 
@@ -67,16 +65,6 @@ body {
 		width:160px;
 		margin: left:10%;
     }
-
-#binder-clip{
-	margin-top: -38px;
-    position: fixed;
-    margin-left: 80px;
-    z-index: 20;
-    -ms-transform: rotate(-27deg);
-    -webkit-transform: rotate(-27deg);
-    transform: rotate(-27deg);
-}
 
 #navigation {
 	margin: 0;
