--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
 	cursor: move;
 	box-shadow: #fefb00 3px 3px 0, 6px 6px 0px #ff0000;
 	background-color: #eee;
+	border-radius: 25px;
 }
 
 #logo {
