--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
         letter-spacing: -0.3px;
 	line-height: 1.5em;
 	cursor: move;
-	background-color: ##F3EBDE;
+	background-color: #F3EBDE;
 	border-radius: 25px;
 	box-shadow: 0 0 8px 8px white inset;
 }
