--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ body {
     font-size: 14px;
     line-height: 19px;
     z-index: 100;
-    color: rgba(0, 0.8);
+    color: #000;
 	z-index: 90;
 	max-width: 277px;
 	right: 145px;
