--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 @font-face {
-  font-family: 'GT-America';
+  font-family: 'GT-America-Standard-Light';
   src: url(fonts/GT-America-Standard-Light.woff); format('woff');
   font-weight: normal;
   font-style: normal;
