--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
 	width: 150px;
 	font-family: 'GT-America-Standard-Light';
 	src: url('fonts/GT-America-Standard-Light.woff');  format('woff');
+	text-transform: uppercase;
 }
 
 #logo {
@@ -102,38 +103,8 @@ body {
 #navigation a:hover{
 	color: #000;
 	text-transform: uppercase;
-	 &::before,
-  &::after {
-    content: '';
-    background: #000;
-    position: absolute;
-    top: 50%;
-    height: 1px;
-    width: 0;
-  }
-  
-  &::before {
-    left: 0;
-  }
-  
-  &::after {
-    right: 0;
-    transition: width 500ms ease;
-  }
-  
-  &:hover {
-    &::before {
-      width: 100%;  
-      transition: width 500ms ease;
-    }
-    
-    &::after {
-      width: 100%;
-      background: transparent;
-      transition: 0;
-    }
-  }
-}
+	text-decoration: line-through;
+
 }
 #navigation .current_page_item a {
 	color: #000;
