--- a/style.css
+++ b/style.css
@@ -59,7 +59,14 @@ body {
 	font-family: 'GT-America-Standard-Light';
 	src: url('fonts/GT-America-Standard-Light.woff');  format('woff');
 	text-transform: uppercase;
-	text-shadow: 2px 2px #ff0000;
+	text-shadow: 
+    1px 0px 1px #ccc, 0px 1px 1px #eee, 
+    2px 1px 1px #ccc, 1px 2px 1px #eee,
+    3px 2px 1px #ccc, 2px 3px 1px #eee,
+    4px 3px 1px #ccc, 3px 4px 1px #eee,
+    5px 4px 1px #ccc, 4px 5px 1px #eee,
+    6px 5px 1px #ccc, 5px 6px 1px #eee,
+    7px 6px 1px #ccc;
 }
 
 #logo {
