--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
     4px 3px 1px #ccc, 3px 4px 1px #eee,
     5px 4px 1px #ccc, 4px 5px 1px #eee,
     6px 5px 1px #ccc, 5px 6px 1px #eee,
+    7px 6px 1px #ccc;
 }
 
 #logo {
@@ -84,7 +85,7 @@ body {
 #navigation {
 	margin: 0;
 	padding:0;
-	list-style-type: -moz-khmer;
+	list-style-type: none;
 }
 
 #navigation li{
