--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
 
 #menu {
 	position: fixed;
+	color: #000;
 	left: 80px;
 	top: 25%;
 	letter-spacing: .01em;
@@ -98,6 +99,7 @@ body {
 	color: #000;
 	padding: 0;
 	padding: 1px;
+	text-decoration: none;
 }
 #navigation a.active{
 	color: #000;
