--- a/style.css
+++ b/style.css
@@ -53,17 +53,17 @@ body {
         letter-spacing: -0.3px;
 	line-height: 1.5em;
 	cursor: move;
-	font-family: 'GT-America-Standard-Light';
-	src: url('fonts/GT-America-Standard-Light.woff');  format('woff');
+	font-family: 'GT-America-Standard-Medium';
+	src: url('fonts/GT-America-Standard-Medium.woff');  format('woff');
 	text-transform: uppercase;
 	text-shadow: 
-    1px 0px 1px #ccc, 0px 1px 1px #eee, 
-    2px 1px 1px #ccc, 1px 2px 1px #eee,
-    3px 2px 1px #ccc, 2px 3px 1px #eee,
-    4px 3px 1px #ccc, 3px 4px 1px #eee,
-    5px 4px 1px #ccc, 4px 5px 1px #eee,
-    6px 5px 1px #ccc, 5px 6px 1px #eee,
-    7px 6px 1px #ccc;
+    1px 0px 1px #FFF7ED, 0px 1px 1px #FFF7ED, 
+    2px 1px 1px #FFF7ED, 1px 2px 1px #FFF7ED,
+    3px 2px 1px #FFF7ED, 2px 3px 1px #FFF7ED,
+    4px 3px 1px #FFF7ED, 3px 4px 1px #FFF7ED,
+    5px 4px 1px #FFF7ED, 4px 5px 1px #FFF7ED,
+    6px 5px 1px #FFF7ED, 5px 6px 1px #FFF7ED,
+    7px 6px 1px #FFF7ED;
 }
 
 #logo {
